Chamge image and folder names

--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -39,15 +39,15 @@
       <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left">
         <p class="pt-3">
           <a href="https://codeforafrica.org" target="_blank">
-            <img class="footer-logo m-4" src="{% static 'img/logos/cfafrica-transparent.png' %}"
+            <img class="footer-logo m-4" src="{% static 'img/logo/cfafrica-logo.png' %}"
             alt="Code for Africa"></a>
           
             <a href="https://icfj.org" target="_blank">
-              <img class="pl-3 footer-logo m-4" src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ"></a>
+              <img class="pl-3 footer-logo m-4" src="{% static 'img/logo/icfj-logo.png' %}" alt="ICFJ"></a>
             </p>
             <p>
               <a href="https://www.thomsonreuters.com/en.html">
-                <img class="tr-logo" src="{% static 'img/logos/Thomson-Reuters.svg' %}"
+                <img class="tr-logo" src="{% static 'img/logo/thomson-reuters-logo.svg' %}"
                 alt="Thomson Reuters"></a>
               </p>
             </div>
