--- a/wajibisha/templates/about.html
+++ b/wajibisha/templates/about.html
@@ -9,7 +9,7 @@
       </div>
       <div class="column-third"></div>
       <div class="column-third push-right">
-          <img src="{% static 'img/aboutus/team.svg' %}" class="presentation-img">
+          <img src="{% static 'img/about/team.svg' %}" class="presentation-img">
       </div>
   </div>
 </div>
