--- a/wajibisha/templates/articles.html
+++ b/wajibisha/templates/articles.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="column-third"></div>
 		<div class="column-third push-right">
-			<img src="{% static 'img/articles/article.svg' %}" class="presentation-img">
+			<img src="{% static 'img/article/article.svg' %}" class="presentation-img">
 		</div>
 	</div>
 </div>
@@ -20,7 +20,7 @@
 	<div class="row justify-content-center align-items-center">
 		<div class="col-lg-12">
 			<div class="card text-white p-0" style="height:500px;">
-        <img class="card-img img-fluid" src="{% static 'img/articles/igathe.png' %}" style="height:500px;">
+        <img class="card-img img-fluid" src="{% static 'img/article/lead-story.png' %}" style="height:500px;">
         <div class="card-img-overlay p-0">
           <button type="button" class="btn article-label rounded-0 pl-4 pr-4">LATEST ARTICLE</button>
           <div class="card-content card-body">
@@ -58,7 +58,7 @@
    <div class="row pt-5 body-text">
     <div class="col-8 d-flex flex-column">
       <div class="article-card card d-flex flex-lg-row p-0">
-        <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
+        <div class="col-md-5 p-0"><img src="{% static 'img/article/fidel-odinga-road.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
         <div class="col-md-7">
           <h6 class="pt-4 m-0 small">NAIROBI COUNTY</h6>
           <h4 class="article-width card-title lead">
@@ -74,7 +74,7 @@
         </div><br>
 
         <div class="article-card card d-flex flex-lg-row p-0 mt-4">
-          <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
+          <div class="col-md-5 p-0"><img src="{% static 'img/article/fidel-odinga-road.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
           <div class="col-md-7">
             <h6 class="pt-4 small m-0">NAIROBI COUNTY</h6>
             <h4 class="article-width card-title lead">
@@ -92,7 +92,7 @@
 
         <div class="col-4">
           <div class="card-hw card p-0">
-            <img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
+            <img src="{% static 'img/article/fidel-odinga-road.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
             <div class="card-body">
               <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
               <h4 class="article-width card-title lead">
@@ -120,7 +120,7 @@
        <div class="row pl-5 pr-5 pt-5 pb-5">
         <div class="card-deck">
           <div class="card-height card p-0">
-            <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+            <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
             <div class="card-body">
               <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
               <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
@@ -133,7 +133,7 @@
               </div>
             </div>
             <div class="card-height card p-0">
-              <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+              <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
               <div class="card-body">
                 <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
                 <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
@@ -146,7 +146,7 @@
                 </div>
               </div>
               <div class="card-height card p-0">
-                <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
                 <div class="card-body">
                   <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
                   <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
@@ -163,7 +163,7 @@
             <div class="row pl-5 pr-5 pt-5 pb-5">
               <div class="card-deck">
                 <div class="card-height card p-0">
-                  <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+                  <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
                   <div class="card-body">
                     <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
                     <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
@@ -176,7 +176,7 @@
                     </div>
                   </div>
                   <div class="card-height card p-0">
-                    <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+                    <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
                     <div class="card-body">
                       <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
                       <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
@@ -189,7 +189,7 @@
                       </div>
                     </div>
                     <div class="card-height card p-0">
-                      <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+                      <img class="card-img-top" src="{% static 'img/article/fidel-odinga-road.jpg' %}" alt="Card image cap">
                       <div class="card-body">
                         <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
                         <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
