--- a/wajibisha/templates/blocks/mission.html
+++ b/wajibisha/templates/blocks/mission.html
@@ -9,7 +9,7 @@
       county development promises using data obtained from campaign manifestos
     </div>
     <div class="column-quarter pie-chart">
-      <img src="{% static 'img/Pie-Chart.svg' %}" height="180">
+      <img src="{% static 'img/pie-chart.svg' %}" height="180">
     </div>
   </div>
 
