--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 		<div class="column-third text-right">
-			<img src="{% static 'img/profiles/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
+			<img src="{% static 'img/profile/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
 			<div class="blue-text">
 				<p class="pb-0">
           <b>Governor : </b> Mike Sonko<br>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="column-third body-text">
-            <img src="{% static 'img/tracker/Ring Pie Chart.svg' %}">
+            <img src="{% static 'img/tracker/ring-pie-chart.svg' %}">
             <p class="pt-0 text-center pr-5 pl-5" style="margin-top:-8rem;font-weight:100;"><b style="font-size:2rem;">63</b> Promises in total</p>
           </div>
 
