--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -6,17 +6,17 @@
   <div class='pt-0 card-group'>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img clas="card-img" src="{% static 'img/aboutus/team.png' %}">
+        <img clas="card-img" src="{% static 'img/about/team.png' %}">
       </div>
     </div>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/aboutus/team.png' %}">
+        <img src="{% static 'img/about/team.png' %}">
       </div>
     </div>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/aboutus/team.png' %}">
+        <img src="{% static 'img/about/team.png' %}">
       </div>
     </div>
   </div>
@@ -24,17 +24,17 @@
   <div class='card-group'>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/aboutus/team.png' %}">
+        <img src="{% static 'img/about/team.png' %}">
       </div>
     </div>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/aboutus/team.png' %}">
+        <img src="{% static 'img/about/team.png' %}">
       </div>
     </div>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/aboutus/team.png' %}">
+        <img src="{% static 'img/about/team.png' %}">
       </div>
     </div>
   </div>
