--- a/wajibisha/templates/fulfilled.html
+++ b/wajibisha/templates/fulfilled.html
@@ -23,7 +23,7 @@
             <tbody>
               <tr>
                 <td style="width:120px;height:150px;">
-                  <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                   style="width:100%;">
                 </td>
                 <td colspan="3">
@@ -35,9 +35,9 @@
                 <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                 <td colspan="3">
                   <div class="d-flex flex-row">
-                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                   </div>
                 </td>
               </tr>
@@ -49,7 +49,7 @@
             <tbody>
               <tr>
                 <td style="width:120px;height:150px;">
-                  <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                   style="width:100%;">
                 </td>
                 <td colspan="3">
@@ -61,9 +61,9 @@
                 <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                 <td colspan="3">
                   <div class="d-flex flex-row">
-                    <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                    <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                    <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                    <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                   </div>
                 </td>
               </tr>
@@ -79,7 +79,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -91,9 +91,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -105,7 +105,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -117,9 +117,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -136,7 +136,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -148,9 +148,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -162,7 +162,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -174,9 +174,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -193,7 +193,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -205,9 +205,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
