--- a/wajibisha/templates/health.html
+++ b/wajibisha/templates/health.html
@@ -61,7 +61,7 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                        <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                         style="width:100%;">
                       </td>
                       <td colspan="3">
@@ -73,9 +73,9 @@
                       <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                       <td colspan="3">
                         <div class="d-flex flex-row">
-                          <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                         </div>
                       </td>
                     </tr>
@@ -87,7 +87,7 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" alt="Fulfilled"
+                        <img class="d-block p-0" src="{% static 'img/tracker/status/stalled-portrait.svg' %}" alt="Fulfilled"
                         style="width:100%;">
                       </td>
                       <td colspan="3">
@@ -99,9 +99,9 @@
                       <td><p class="font-weight-normal text-center">STALLED</p></td>
                       <td colspan="3">
                         <div class="d-flex flex-row">
-                          <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                         </div>
                       </td>
                     </tr>
@@ -115,7 +115,7 @@
                     <tbody>
                       <tr>
                         <td style="width:120px;height:150px;">
-                          <img class="d-block p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
+                          <img class="d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled"
                           style="width:100%;">
                         </td>
                         <td colspan="3">
@@ -127,9 +127,9 @@
                         <td><p class="font-weight-normal text-center">IN PROGRESS</p></td>
                         <td colspan="3">
                           <div class="d-flex flex-row">
-                            <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                            <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                            <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                           </div>
                         </td>
                       </tr>
@@ -141,7 +141,7 @@
                     <tbody>
                       <tr>
                         <td style="width:120px;height:150px;">
-                          <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                          <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                           style="width:100%;">
                         </td>
                         <td colspan="3">
@@ -153,9 +153,9 @@
                         <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                         <td colspan="3">
                           <div class="d-flex flex-row">
-                            <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                            <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                            <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                            <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                           </div>
                         </td>
                       </tr>
@@ -173,7 +173,7 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg' %}" alt="Fulfilled"
+                        <img class="d-block p-0" src="{% static 'img/tracker/status/unfulfilled-portrait.svg' %}" alt="Fulfilled"
                         style="width:100%;">
                       </td>
                       <td colspan="3">
@@ -185,9 +185,9 @@
                       <td><p class="font-weight-normal text-center">IN PROGRESS</p></td>
                       <td colspan="3">
                         <div class="d-flex flex-row">
-                          <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                         </div>
                       </td>
                     </tr>
@@ -199,7 +199,7 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                        <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                         style="width:100%;">
                       </td>
                       <td colspan="3">
@@ -211,9 +211,9 @@
                       <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                       <td colspan="3">
                         <div class="d-flex flex-row">
-                          <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                          <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                          <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                         </div>
                       </td>
                     </tr>
@@ -229,7 +229,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -241,9 +241,9 @@
                     <td><p class="font-weight-normal text-center">IN PROGRESS</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -255,7 +255,7 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
                       style="width:100%;">
                     </td>
                     <td colspan="3">
@@ -267,9 +267,9 @@
                     <td><p class="font-weight-normal text-center">FULFILLED</p></td>
                     <td colspan="3">
                       <div class="d-flex flex-row">
-                        <p class="offset-1"><img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> Share</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
-                        <p class="offset-1"><img src="{% static 'img/tracker/Clap.svg' %}" height="15px" width="15px"> Congratulate</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> Share</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
+                        <p class="offset-1"><img src="{% static 'img/tracker/clap.svg' %}" height="15px" width="15px"> Congratulate</p>
                       </div>
                     </td>
                   </tr>
@@ -279,7 +279,7 @@
           </div>
           <!--Pagination section-->
           <div class="d-flex flex-row justify-content-center" >
-            <nav aria-label="Navigation" style="color:#707070;">
+            <nav aria-label="Navigation body-text">
               <ul class="pagination">
                 <li class="page-item">
                   <a class="pl-1" href="#" aria-label="Previous">
