--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -41,7 +41,7 @@
       <div class="card-group">
         <div class="card p-0 m-3 body-text">
           <div class="pt-4">
-            <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/Housing.svg' %}" alt="Card image cap"></div>
+            <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/housing.svg' %}" alt="Card image cap"></div>
             <div class="card-block">
               <h5 class="card-title">HOUSING</h5>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="card p-0 m-3 body-text">
               <div class="pt-4">
-                <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/Jobs.svg' %}" alt="Card image cap"></div>
+                <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/jobs.svg' %}" alt="Card image cap"></div>
                 <div class="card-block">
                   <h5 class="card-title">JOBS</h5>
                 </div>
