--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -27,7 +27,7 @@
         <div class="status-card card p-0 body-text">
           <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Health.svg' %}">
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/health.svg' %}">
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -54,9 +54,9 @@
         </div>
         <div class="d-flex flex-row pb-3 pt-3">
           <p class="pt-0 mr-auto">
-            <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+            <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
             <span >Share</span></p>
-            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+            <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
         <div class="status-card card p-0 body-text">
           <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Housing.svg' %}" >
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/housing.svg' %}" >
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -94,7 +94,7 @@
           <p class="pt-0 mr-auto">
             <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
             <span >Share</span></p>
-            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+            <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
         <div class="status-card card p-0 body-text">
           <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Jobs.svg' %}">
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/jobs.svg' %}">
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -130,9 +130,9 @@
         </div>
         <div class="d-flex flex-row pb-3 pt-3">
           <p class="pt-0 mr-auto">
-            <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+            <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
             <span >Share</span></p>
-            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+            <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
             <div class="status-card card p-0 body-text">
               <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Governance.svg' %}">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/governance.svg' %}">
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -171,9 +171,9 @@
             </div>
             <div class="d-flex flex-row pb-3 pt-3">
               <p class="pt-0 mr-auto">
-                <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+                <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
                 <span >Share</span></p>
-                <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
             <div class="status-card card p-0 body-text">
               <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Environment.svg' %}">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/environment.svg' %}">
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -208,9 +208,9 @@
             </div>
             <div class="d-flex flex-row pb-3 pt-3">
               <p class="pt-0 mr-auto">
-                <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+                <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
                 <span >Share</span></p>
-                <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
             <div class="status-card card p-0 body-text">
               <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Traffic Management.svg' %}" >
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/traffic-management.svg' %}" >
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -245,9 +245,9 @@
             </div>
             <div class="d-flex flex-row pb-3 pt-3">
               <p class="pt-0 mr-auto">
-                <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+                <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
                 <span >Share</span></p>
-                <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
             <div class="status-card card p-0 body-text">
               <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Social Inclusion.svg' %}" >
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/social-inclusion.svg' %}" >
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -282,15 +282,15 @@
             </div>
             <div class="d-flex flex-row pb-3 pt-3">
               <p class="pt-0 mr-auto">  
-                <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+                <img src="{% static 'img/tracker/share.svg' %}" height="15px" width="15px"> 
                 <span >Share</span></p>
-                <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+                <p class="pt-0"><img src="{% static 'img/tracker/watch.svg' %}" height="15px" width="15px"> Watch</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div>s
   </div>
   {% include 'blocks/info-card.html' %}
   {% include 'blocks/buttons.html' %}
